[package]
name = "inat"
version = "0.1.0"
authors = ["MikloÌs Tusz <mdtusz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
petgraph = "0.5.0"
portaudio = "0.7.0"
sample = "0.10.0"
termion = "1.5"
tui = "0.8.0"
tui-logger = "0.4.5"
