[package]
name = "inat"
version = "0.1.0"
authors = ["MikloÌs Tusz <mdtusz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
cpal = "0.11.0"
hound = "3.4.0"
log = "0.4"
midir = "0.6.0"
petgraph = "0.5.0"
sample = "0.10.0"
termion = "1.5"
tui = "0.10.0"
